infra/gateway/gateway-class.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gateway-class
  labels:
    app: "logistics.example.com"
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
