infra/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  labels:
    app: "logistics.example.com"
spec:
  gatewayClassName: gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      protocol: HTTPS
      port: 443
      # hostname: "logistics.example.com"
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          group: ""
          # name: cert
          name: wildcard-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - logistics.example.com
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
