infra/gateway/keycloak-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: app
spec:
  parentRefs:
    - name: gateway
      sectionName: https
  hostnames:
    - "auth.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - kind: Service
          name: keycloak-keycloakx-http
          port: 80
